--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body {
   background: whitesmoke;
 }
 
+h1 {
+  text-align: center;
+  font-size: 40px;
+  margin: 20px 0;
+  letter-spacing: 5;
+}
+
 .loading {
   position: fixed;
   top: 0;
@@ -25,4 +32,23 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.image-container {
+  margin: 10px 30%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  .image-container {
+    margin: 10px;
+  }
 }
