--- a/style.css
+++ b/style.css
@@ -38,6 +38,13 @@ h1 {
   margin: 10px 30%;
 }
 
+.image-name {
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
 .image-container img {
   width: 100%;
   margin-bottom: 2rem;
